fix: readjust association spinner and remove extra padding from association headings

--- a/client/src/app/components/stardust/AssociationSection.scss
+++ b/client/src/app/components/stardust/AssociationSection.scss
@@ -5,6 +5,12 @@
 @import "../../../scss/themes";
 
 .section.association-section {
+    padding: 20px 0px;
+
+    .association-section--header {
+        height: 40px;
+    }
+
     .association-section--table {
         width: 100%;
         margin-top: 16px;
